<resources>
    <string name="app_name">Poluxion</string>
    <string name="POLU">POLU</string>
    <string name="XION">XION</string>
    <string name="CAQI">AQI</string>
    <string name="location">location</string>
    <string name="unknown">Unknown location</string>
    <string name="pm10">PM<sub>10</sub></string>
    <string name="pm2_5">PM<sub>2.5</sub></string>
    <string name="pm1">PM<sub>1</sub></string>
    <string name="no2">NO<sub>2</sub></string>
    <string name="nh3">NH<sub>3</sub></string>
    <string name="co">CO</string>
    <string name="co2">CO<sub>2</sub></string>
    <string name="o3">O<sub>3</sub></string>
    <string name="so2">SO<sub>2</sub></string>
    <string name="voc">VOC</string>
    <string name="pb"> Pb</string>
    <string name="um3"> μg/m³</string>
    <string name="ppb"> ppb</string>
    <string name="C"> °C</string>
    <string name="hPa"> hPa</string>
    <string name="activity">activity</string>
    <string name="tracker">tracker</string>
    <string name="total_steps">Total steps</string>
    <string name="email">Email address</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="take_to_login">or login <b><i>here</i></b>\.\.\.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="take_to_register">or create a new account <b><i>here</i></b>\.\.\.</string>
    <string name="reason_login">For information accuracy, please enter your account.</string>
    <string name="settings">Settings</string>
    <string name="measurement_units">Measurement units</string>
    <string name="weight">Weight</string>
    <string name="save_weight">Save weight</string>
    <string name="height">Height</string>
    <string name="save_height">Save height</string>
    <string name="last_successful_update">Last successful update: </string>
    <string name="walk_inside_bpi"> walking steps inside</string>
    <string name="walk_outside_bpi"> walking steps outside</string>
    <string name="run_inside_bpi"> running steps inside</string>
    <string name="run_outside_bpi"> running steps outside</string>
    <string name="walk_mins"> min of walking</string>
    <string name="run_mins"> min of running</string>
    <string name="BPI"> % BPI</string>
    <string name="error_text">Data could not be retrieved correctly. \nUnknown location by the data provider or lack of internet connectivity.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
</resources>
