<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/register"
                android:scaleX="1.2"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:inputType="text|textCapSentences"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/last_name"
                android:inputType="text|textCapSentences"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">


                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/male"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimaryDark"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/female"
                    android:textSize="18sp"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimaryDark"/>
            </RadioGroup>

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/age"
                android:inputType="number"
                android:ems="3"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/button"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/take_to_login"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>