<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:gravity="center"
    android:id="@+id/login">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:scaleX="1.2"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimary" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/take_to_register"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>