<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layout_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_margin="25sp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/POLU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/POLU"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/XION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/XION"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="50dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nrAQI"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:elegantTextHeight="true"
                            android:gravity="center"
                            android:text="    "
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="50sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/QAI"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="start"
                                    android:text="@string/CAQI"
                                    android:textAllCaps="true"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/temperature"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.75"
                                    android:gravity="end"
                                    android:text=""
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="15sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:text="@string/C"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/pressure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.75"
                                    android:gravity="end"
                                    android:text=""
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="15sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="end"
                                    android:text="@string/mb"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="15sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="start"
                                    android:layout_weight="0.25"
                                    android:contentDescription="@string/location"
                                    android:src="@drawable/pin" />

                                <TextView
                                    android:id="@+id/location"
                                    android:layout_width="wrap_content"
                                    android:layout_height="40dp"
                                    android:layout_weight="1.75"
                                    android:gravity="start"
                                    android:text="@string/unknown"
                                    android:textAllCaps="true"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <pam.poluxion.widgets.ArcProgress
                android:id="@+id/arc_progress"
                android:layout_width="158dp"
                android:layout_height="158dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                custom:arc_bottom_text="Very Good"
                custom:arc_progress="85" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="25sp"
                tools:context=".MainActivity" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/pm10"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/pm10"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/pm2_5"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/pm2_5"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/pm1"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/pm1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/no2"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/no2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/nh3"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.2"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/nh3"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/co"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/co"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/co2"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/co2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/o3"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/o3"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/so2"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/so2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/voc"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/voc"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/pb"
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="0.16"
                            android:background="@color/colorAccent"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/pb"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/measurement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="25sp"
                        android:gravity="center"
                        android:text="7.6 μ/m³"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="35sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:alpha="0.75"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/sliderDot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25sp"
                android:gravity="center"
                android:orientation="horizontal" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>